--- a/portfolio.html
+++ b/portfolio.html
@@ -100,7 +100,7 @@
                                                       " media="(max-width: 1199px)" />
                                     <source srcset="
                                                        images/p1.jpg 1x,
-                                                       images/p1x2.jpg x2
+                                                       images/p1x2.jpg 2x
                                                       " media="(min-width: 1200px)" />
                                     <img class="card__image" src="images/p1.jpg" width="370" height="294" />
                                 </picture>
@@ -140,7 +140,7 @@
                                                                               " media="(max-width: 1199px)" />
                                     <source srcset="
                                                                                images/p2.jpg 1x,
-                                                                               images/p2x2.jpg x2
+                                                                               images/p2x2.jpg 2x
                                                                               " media="(min-width: 1200px)" />
                                     <img class="card__image" src="images/p2.jpg" width="370" height="294" />
                                 </picture>
@@ -180,7 +180,7 @@
                                                                               " media="(max-width: 1199px)" />
                                     <source srcset="
                                                                                images/p3.jpg 1x,
-                                                                               images/p3x2.jpg x2
+                                                                               images/p3x2.jpg 2x
                                                                               " media="(min-width: 1200px)" />
                                     <img class="card__image" src="images/p3.jpg" width="370" height="294" />
                                 </picture>
@@ -220,7 +220,7 @@
                                                                               " media="(max-width: 1199px)" />
                                     <source srcset="
                                                                                images/p4.jpg 1x,
-                                                                               images/p4x2.jpg x2
+                                                                               images/p4x2.jpg 2x
                                                                               " media="(min-width: 1200px)" />
                                     <img class="card__image" src="images/p4.jpg" width="370" height="294" />
                                 </picture>
@@ -260,7 +260,7 @@
                                                                               " media="(max-width: 1199px)" />
                                     <source srcset="
                                                                                images/p5.jpg 1x,
-                                                                               images/p5x2.jpg x2
+                                                                               images/p5x2.jpg 2x
                                                                               " media="(min-width: 1200px)" />
                                     <img class="card__image" src="images/p5.jpg" width="370" height="294" />
                                 </picture>
@@ -300,7 +300,7 @@
                                                                               " media="(max-width: 1199px)" />
                                     <source srcset="
                                                                                images/p6.jpg 1x,
-                                                                               images/p6x2.jpg x2
+                                                                               images/p6x2.jpg 2x
                                                                               " media="(min-width: 1200px)" />
                                     <img class="card__image" src="images/p6.jpg" width="370" height="294" />
                                 </picture>
@@ -340,7 +340,7 @@
                                                                               " media="(max-width: 1199px)" />
                                     <source srcset="
                                                                                images/p7.jpg 1x,
-                                                                               images/p7x2.jpg x2
+                                                                               images/p7x2.jpg 2x
                                                                               " media="(min-width: 1200px)" />
                                     <img class="card__image" src="images/p7.jpg" width="370" height="294" />
                                 </picture>
@@ -380,7 +380,7 @@
                                                                               " media="(max-width: 1199px)" />
                                     <source srcset="
                                                                                images/p8.jpg 1x,
-                                                                               images/p8x2.jpg x2
+                                                                               images/p8x2.jpg 2x
                                                                               " media="(min-width: 1200px)" />
                                     <img class="card__image" src="images/p8.jpg" width="370" height="294" />
                                 </picture>
@@ -420,7 +420,7 @@
                                                                               " media="(max-width: 1199px)" />
                                     <source srcset="
                                                                                images/p9.jpg 1x,
-                                                                               images/p9x2.jpg x2
+                                                                               images/p9x2.jpg 2x
                                                                               " media="(min-width: 1200px)" />
                                     <img class="card__image" src="images/p9.jpg" width="370" height="294" />
                                 </picture>
