--- a/index.html
+++ b/index.html
@@ -126,7 +126,6 @@
                 </h1>
                 <button class="head-box__button" type="button" data-modal-open>
                     Zamów usługę
-                    <!-- <span class="head-box__button-text">Zamów usługę</span> -->
                 </button>
             </div>
         </section>
@@ -203,8 +202,8 @@
                                             ./images/a1x2.jpg 2x
                                           " />
                             <source srcset="
-                                            ./images/a1   1x,
-                                            ./images/a1x2 2x
+                                            ./images/a1.jpg   1x,
+                                            ./images/a1x2.jpg 2x
                                           " />
                             <img src="images/a1.jpg" alt="work on computer" width="370" height="294" />
                         </picture>
@@ -221,8 +220,8 @@
                                             ./images/a2x2.jpg 2x
                                             " />
                             <source srcset="
-                                            ./images/a2   1x,
-                                            ./images/a2x2 2x
+                                            ./images/a2.jpg   1x,
+                                            ./images/a2x2.jpg 2x
                                             " />
                             <img src="images/a2.jpg" alt="work on computer" width="370" height="294" />
                         </picture>
@@ -239,8 +238,8 @@
                                             ./images/a3x2.jpg 2x
                                             " />
                             <source srcset="
-                                            ./images/a3   1x,
-                                            ./images/a3x2 2x
+                                            ./images/a3.jpg   1x,
+                                            ./images/a3x2.jpg 2x
                                             " />
                             <img src="images/a3.jpg" alt="work on computer" width="370" height="294" />
                         </picture>
@@ -270,7 +269,7 @@
                                           " media="(max-width: 1199px)" />
                             <source srcset="
                                            images/b1.jpg 1x,
-                                           images/b1x2.jpg x2
+                                           images/b1x2.jpg 2x
                                           " media="(min-width: 1200px)" />
                             <img class="team__img" src="images/b1.jpg" alt="johns doe photo" />
                         </picture>
@@ -325,7 +324,7 @@
                                             " media="(max-width: 1199px)" />
                             <source srcset="
                                             images/b2.jpg 1x,
-                                            images/b2x2.jpg x2
+                                            images/b2x2.jpg 2x
                                             " media="(min-width: 1200px)" />
                             <img class="team__img" src="images/b2.jpg" alt="johns doe photo" />
                         </picture>
@@ -379,7 +378,7 @@
                                             " media="(max-width: 1199px)" />
                             <source srcset="
                                             images/b3.jpg 1x,
-                                            images/b3x2.jpg x2
+                                            images/b3x2.jpg 2x
                                             " media="(min-width: 1200px)" />
                             <img class="team__img" src="images/b3.jpg" alt="johns doe photo" />
                         </picture>
@@ -433,7 +432,7 @@
                                             " media="(max-width: 1199px)" />
                             <source srcset="
                                             images/b4.jpg 1x,
-                                            images/b4x2.jpg x2
+                                            images/b4x2.jpg 2x
                                             " media="(min-width: 1200px)" />
                             <img class="team__img" src="images/b4.jpg" alt="johns doe photo" />
                         </picture>
